--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,7 +32,7 @@ import CloseIcon from "../assets/icons/close.svg";
 		</button>
 		<div class="internal-links">
 			<HeaderLink href="/storm/">Home</HeaderLink>
-			<HeaderLink href="/storm/portfolio">Portfolio</HeaderLink>
+			<HeaderLink href="/storm/available-pieces">Available Pieces</HeaderLink>
 			<HeaderLink href="/storm/about">About</HeaderLink>
 			<HeaderLink href="/storm/contact">Contact</HeaderLink>
 			<div class="social-links">
