--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -93,6 +93,12 @@ p {
 	margin-bottom: 2em;
 }
 
+.text-small {
+	margin-bottom: 0.5em;
+	font-size: 0.75em;
+	line-height: 1.5;
+}
+
 main {
 	background-color: var(--peachy-pink);
 }
