--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,12 +34,12 @@ const sortPosts = (
         margin-block-end: 0;
         padding-inline-start: 0;
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: var(--margin-xl);
+        grid-template-columns: repeat(1, 1fr);
+        gap: var(--margin-md);
         width: 100%;
     }
 
-    @media (max-width: 600px) {
+    @media (min-width: 600px) {
         .portfolio-grid {
             grid-template-columns: repeat(2, 1fr);
             gap: var(--margin-md);
