fix availableCards text

--- a/src/components/AvailableCard.astro
+++ b/src/components/AvailableCard.astro
@@ -42,6 +42,7 @@ const titleId = (title: string) => {
         color: var(--white);
         width: 100%;
         text-align: left;
+        line-height: 1.5;
     }
 
 </style>
@@ -60,7 +61,7 @@ const titleId = (title: string) => {
             )}
         </div>
         <div class="overlay">
-            <p class="text text-small">
+            <p class="text">
                 {availableText ? availableText : title}
             </p>
         </div>
