--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import CloseIcon from "../assets/icons/close.svg";
 
 <header>
 	<nav>
-		<a href="/storm/" class="header-title">
+		<a href="/" class="header-title">
 			<div class="blink">
 				<span class="sr-only">Storm Philippa Clarén</span>
 			</div>
@@ -31,10 +31,10 @@ import CloseIcon from "../assets/icons/close.svg";
 			/>
 		</button>
 		<div class="internal-links">
-			<HeaderLink href="/storm/">Home</HeaderLink>
-			<HeaderLink href="/storm/available-pieces">Available Pieces</HeaderLink>
-			<HeaderLink href="/storm/about">About</HeaderLink>
-			<HeaderLink href="/storm/contact">Contact</HeaderLink>
+			<HeaderLink href="/">Home</HeaderLink>
+			<HeaderLink href="/available-pieces">Available Pieces</HeaderLink>
+			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/contact">Contact</HeaderLink>
 			<div class="social-links">
 				<a href="https://www.instagram.com/philleonfire/" target="_blank">
 					<span class="sr-only">Follow @phillefire on Instagram</span>
