--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -67,7 +67,7 @@ const sortPosts = (
 						<PortfolioCard 
 							cover={post.data.cover}
 							coverAlt={post.data.coverAlt}
-							url={`/storm/portfolio/${post.id}/`}
+							url={`/portfolio/${post.id}/`}
 							title={post.data.title}
                             class="grid-item"
 						/>
