add netlify script to BaseLayout

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -55,6 +55,8 @@ const {title, description, background} = Astro.props;
 		</style>
 	</head>
 
+	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+	
 	<body>
 		<Header />
 		<main class={background}>
