update portfolio schema to remove image parameter and adjust image rendering

--- a/src/layouts/PortfolioArt.astro
+++ b/src/layouts/PortfolioArt.astro
@@ -104,9 +104,9 @@ const {
                     {
                         additionalImgs.map((img) => (
                             <img 
-                                width={img.width} 
-                                height={img.height} 
-                                src={img.src} 
+                                width={940} 
+                                height={1268} 
+                                src={img} 
                                 alt=""
                             />
                         ))
