--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,6 +3,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import AboutSection from '../components/AboutSection.astro';
 import PageTitle from '../components/PageTitle.astro';
 import { getCollection, type CollectionEntry, getEntry, render } from 'astro:content';
+import { SITE_DESCRIPTION, SITE_TITLE_TAG } from '../consts';
 
 const aboutPosts = await getCollection('about');
 
@@ -46,8 +47,8 @@ const orderedAbout = aboutPosts.sort(
 </style>
 
 <BaseLayout
-	title="About Me"
-	description="Lorem ipsum dolor sit amet"
+	title={`About Me ${SITE_TITLE_TAG}`}
+	description={SITE_DESCRIPTION}
 	background="wine-red"
 >
 	<PageTitle 
