--- a/src/pages/available-pieces/index.astro
+++ b/src/pages/available-pieces/index.astro
@@ -4,6 +4,7 @@ import { getCollection } from 'astro:content';
 import type { CollectionEntry } from "astro:content";
 import AvailableCard from '../../components/AvailableCard.astro';
 import PageTitle from "../../components/PageTitle.astro";
+import { SITE_DESCRIPTION, SITE_TITLE_TAG } from '../../consts';
 
 const posts = (await getCollection('portfolio'))
 
@@ -56,8 +57,8 @@ const availablePosts = await getCollection('portfolio', ({ data }) => data.avail
     }
 </style>
 <BaseLayout
-    title="Available Pieces"
-    description="Lorem ipsum dolor sit amet"
+    title={`Available Pieces ${SITE_TITLE_TAG}`}
+    description={SITE_DESCRIPTION}
     background="wine-red"
 >
     <PageTitle 
