--- a/src/components/AvailableCard.astro
+++ b/src/components/AvailableCard.astro
@@ -16,11 +16,17 @@ const titleId = (title: string) => {
 	    border: 0.5em solid var(--wine-red);
         overflow: hidden;
     }
+    
+    .portfolio-link, .portfolio-card-container {
+        width: 100%;
+        height: 100%;
+    }
 
     .portfolio-img {
         display: block;
-        max-width: 100%;
-	    height: auto;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .overlay {
@@ -49,7 +55,7 @@ const titleId = (title: string) => {
 
 <li class="portfolio-card">
     <a href={url} class="portfolio-link">
-        <div>
+        <div class="portfolio-card-container">
             {cover && (
                 <Image 
                     width={720} 
