remove max-height on artwork page

--- a/src/layouts/PortfolioArt.astro
+++ b/src/layouts/PortfolioArt.astro
@@ -28,7 +28,7 @@ const {
 
     .hero-image {
         width: 100%;
-        max-height: 126vh;
+        /*max-height: 126vh;*/
         background-color: var(--peachy-pink);
         padding: var(--margin-md);
         border-radius: var(--border-radius);
