--- a/src/layouts/PortfolioArt.astro
+++ b/src/layouts/PortfolioArt.astro
@@ -59,9 +59,23 @@ const {
 
     .additional-images {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         grid-template-rows: 1fr;
         gap: var(--margin-md);
+    }
+
+    @media (min-width: 600px) {
+        .additional-images {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: 1fr;
+        }
+    }
+
+    @media (min-width: 1024px) {
+        .additional-images {
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: 1fr;
+        }
     }
 
     .additional-images img {
